HNSW function structure

--- a/Copy_of_Evaluate_ADB_Project.ipynb
+++ b/Copy_of_Evaluate_ADB_Project.ipynb
@@ -1,31 +1,19 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# This Notebook for Running the ADB Project Phase 2"
-      ],
       "metadata": {
         "id": "Yj9-3U--Krvc"
-      }
+      },
+      "source": [
+        "# This Notebook for Running the ADB Project Phase 2"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "hV2Nc_f8Mbqh"
+      },
       "source": [
         "**This notebook is divided into two main parts, each focusing on different database sizes:**\n",
         "- **Part 1: Database Size 10K**\n",
@@ -62,38 +50,35 @@
         "\n",
         "\n",
         "  "
-      ],
-      "metadata": {
-        "id": "hV2Nc_f8Mbqh"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# New Section"
-      ],
       "metadata": {
         "id": "gbcmVg4fu9ZP"
-      }
+      },
+      "source": [
+        "# New Section"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Part 1 - Modifiable Cells"
-      ],
       "metadata": {
         "id": "C4EV_xB6Kw17"
-      }
+      },
+      "source": [
+        "## Part 1 - Modifiable Cells"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "AODP-iztLtBV"
+      },
       "source": [
         "Of course each team will provide different github repo link\n",
         "Should include PAT token to enable me to download"
-      ],
-      "metadata": {
-        "id": "AODP-iztLtBV"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -107,8 +92,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'sematic_search_DB'...\n",
             "warning: redirecting to https://github.com/abdokaseb/sematic_search_DB.git/\n",
@@ -127,6 +112,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "UsUXWYom6xRv"
+      },
       "source": [
         "Teams are required to provide unique paths for the generated databases of sizes 1M, 5M, 10M, 15M, and 20M. Follow these steps to submit the databases:\n",
         "\n",
@@ -138,13 +126,15 @@
         "- Place the ID in the designated variable (to be submitted during the project final phase).\n",
         "- The code will automatically download the zip file and unzip it inside this directory.\n",
         "- Provide the local PATH for each database to be passed to the initializer for automatic loading of the database and index (to be submitted during the project final phase)."
-      ],
-      "metadata": {
-        "id": "UsUXWYom6xRv"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "kK46_ZVe5L3u"
+      },
+      "outputs": [],
       "source": [
         "TEAM_NUMBER = 1\n",
         "GDRIVE_ID_DB_100K = \"14Gp_C3LxLuYIyF-zL5q-xFXKQ8KOFtZp\"\n",
@@ -159,36 +149,34 @@
         "PATH_DB_10M = \"saved_db_10m.csv\"\n",
         "PATH_DB_15M = \"saved_db_15m.csv\"\n",
         "PATH_DB_20M = \"saved_db_20m.csv\""
-      ],
-      "metadata": {
-        "id": "kK46_ZVe5L3u"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "These two varaible I'll change while running in on the discussion"
-      ],
       "metadata": {
         "id": "0LGLg01fsujm"
-      }
+      },
+      "source": [
+        "These two varaible I'll change while running in on the discussion"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "QUERY_SEED_NUMBER = 10\n",
-        "DB_SEED_NUMBER = 20"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "G44iH6jnObEj"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "QUERY_SEED_NUMBER = 10\n",
+        "DB_SEED_NUMBER = 20"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "kWaZ-ByWOIcK"
+      },
       "source": [
         "This means that the project submission will include these\n",
         "- TEAM_NUMBER\n",
@@ -206,27 +194,22 @@
         "- PATH_DB_15M\n",
         "- PATH_DB_20M <br>\n",
         "- And for sure the project document that describes what you did"
-      ],
-      "metadata": {
-        "id": "kWaZ-ByWOIcK"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "hzFTOecwu8wj"
+      },
       "source": [
         "## Part 2: No edits from here\n",
         "#### You can't edit this part, and neither me.\n",
         "#### Note: Maybe I can edit if there is a major bug"
-      ],
-      "metadata": {
-        "id": "hzFTOecwu8wj"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%cd sematic_search_DB"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -234,32 +217,31 @@
         "id": "Dqujj7tYTA1l",
         "outputId": "5df8377b-53a6-4234-ea70-b733ae3fb5ec"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/sematic_search_DB\n"
           ]
         }
+      ],
+      "source": [
+        "%cd sematic_search_DB"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "This cell to run any additional requirement that your code need <br>\n"
-      ],
       "metadata": {
         "id": "yJmXzFdisD7P"
-      }
+      },
+      "source": [
+        "This cell to run any additional requirement that your code need <br>\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install memory-profiler >> log.txt\n",
-        "!pip install -r requirements.txt"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -267,42 +249,32 @@
         "id": "HaPjq2hMqd20",
         "outputId": "4bd40efe-0c70-41c7-82c5-67314ef98873"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from -r requirements.txt (line 1)) (1.23.5)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install memory-profiler >> log.txt\n",
+        "!pip install -r requirements.txt"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "This cell to download the zip files and unzip them here."
-      ],
       "metadata": {
         "id": "lG0DALR498__"
-      }
+      },
+      "source": [
+        "This cell to download the zip files and unzip them here."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!gdown $GDRIVE_ID_DB_100K -O saved_db_100k.zip\n",
-        "!gdown $GDRIVE_ID_DB_1M -O saved_db_1m.zip\n",
-        "!gdown $GDRIVE_ID_DB_5M -O saved_db_5m.zip\n",
-        "!gdown $GDRIVE_ID_DB_10M -O saved_db_10m.zip\n",
-        "!gdown $GDRIVE_ID_DB_15M -O saved_db_15m.zip\n",
-        "!gdown $GDRIVE_ID_DB_20M -O saved_db_20m.zip\n",
-        "!unzip saved_db_100k.zip\n",
-        "!unzip saved_db_1m.zip\n",
-        "!unzip saved_db_5m.zip\n",
-        "!unzip saved_db_10m.zip\n",
-        "!unzip saved_db_15m.zip\n",
-        "!unzip saved_db_20m.zip"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -310,11 +282,10 @@
         "id": "jSv2z0PVp6HA",
         "outputId": "d6adeac9-43a4-4fe0-c38e-df9a592d614d"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=14Gp_C3LxLuYIyF-zL5q-xFXKQ8KOFtZp\n",
@@ -354,19 +325,38 @@
             "  inflating: saved_db_20m.csv        \n"
           ]
         }
+      ],
+      "source": [
+        "!gdown $GDRIVE_ID_DB_100K -O saved_db_100k.zip\n",
+        "!gdown $GDRIVE_ID_DB_1M -O saved_db_1m.zip\n",
+        "!gdown $GDRIVE_ID_DB_5M -O saved_db_5m.zip\n",
+        "!gdown $GDRIVE_ID_DB_10M -O saved_db_10m.zip\n",
+        "!gdown $GDRIVE_ID_DB_15M -O saved_db_15m.zip\n",
+        "!gdown $GDRIVE_ID_DB_20M -O saved_db_20m.zip\n",
+        "!unzip saved_db_100k.zip\n",
+        "!unzip saved_db_1m.zip\n",
+        "!unzip saved_db_5m.zip\n",
+        "!unzip saved_db_10m.zip\n",
+        "!unzip saved_db_15m.zip\n",
+        "!unzip saved_db_20m.zip"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "These are the functions for running and reporting"
-      ],
       "metadata": {
         "id": "ShuPR-gGlX3f"
-      }
+      },
+      "source": [
+        "These are the functions for running and reporting"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Sg2vfYgeyavn"
+      },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "from vec_db import VecDB\n",
@@ -428,24 +418,24 @@
         "\n",
         "def get_actual_ids_first_k(actual_sorted_ids, k):\n",
         "    return [id for id in actual_sorted_ids if id < k]"
-      ],
-      "metadata": {
-        "id": "Sg2vfYgeyavn"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "This to generate 10K database and the query using the seed numbers that will be changed at submissions day"
-      ],
       "metadata": {
         "id": "J3bQQzzWlce4"
-      }
+      },
+      "source": [
+        "This to generate 10K database and the query using the seed numbers that will be changed at submissions day"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "82Mb008w5YB7"
+      },
+      "outputs": [],
       "source": [
         "rng = np.random.default_rng(DB_SEED_NUMBER)\n",
         "vectors = rng.random((10**4, 70), dtype=np.float32)\n",
@@ -454,24 +444,36 @@
         "query = rng.random((1, 70), dtype=np.float32)\n",
         "\n",
         "actual_sorted_ids_10k = np.argsort(vectors.dot(query.T).T / (np.linalg.norm(vectors, axis=1) * np.linalg.norm(query)), axis= 1).squeeze().tolist()[::-1]"
-      ],
-      "metadata": {
-        "id": "82Mb008w5YB7"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Open new DB add 10K then retrieve and evaluate. Then add another 90K (total 100K) then retrieve and evaluate."
-      ],
       "metadata": {
         "id": "QiofTQ56l1wz"
-      }
+      },
+      "source": [
+        "Open new DB add 10K then retrieve and evaluate. Then add another 90K (total 100K) then retrieve and evaluate."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "broiY85IyDZ6",
+        "outputId": "70143c78-853d-4b8d-ec0a-62937856af52"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "10K\tscore\t0.0\ttime\t1.11\tRAM\t0.84 MB\n"
+          ]
+        }
+      ],
       "source": [
         "db = VecDB()\n",
         "\n",
@@ -483,44 +485,20 @@
         "to_print = f\"10K\\tscore\\t{eval[0]}\\ttime\\t{eval[1]:.2f}\\tRAM\\t{mem:.2f} MB\"\n",
         "to_print_arr.append(to_print)\n",
         "print(to_print)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "broiY85IyDZ6",
-        "outputId": "70143c78-853d-4b8d-ec0a-62937856af52"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "10K\tscore\t0.0\ttime\t1.11\tRAM\t0.84 MB\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Remove exsiting varaibles to empty some RAM"
-      ],
       "metadata": {
         "id": "TZy7uYKeFQ-K"
-      }
+      },
+      "source": [
+        "Remove exsiting varaibles to empty some RAM"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "del vectors\n",
-        "del query\n",
-        "del actual_sorted_ids_10k\n",
-        "del records_dict\n",
-        "del db\n",
-        "gc.collect()"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -528,33 +506,45 @@
         "id": "MreLqUWLn2uX",
         "outputId": "95a5233c-5eee-4c66-bd83-eb10d9ddf01c"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "0"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "del vectors\n",
+        "del query\n",
+        "del actual_sorted_ids_10k\n",
+        "del records_dict\n",
+        "del db\n",
+        "gc.collect()"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "rrOlipAOmy9K"
+      },
       "source": [
         "This code to generate 20M database. The seed (50) will not be changed. Create the same DB and prepare it's files indexes and every related file. <br>\n",
         "Note at the submission I'll not run the insert records. <br>\n",
         "The query istelf will be changed at submissions day but not the DB"
-      ],
-      "metadata": {
-        "id": "rrOlipAOmy9K"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "c83ybYSKK85G"
+      },
+      "outputs": [],
       "source": [
         "rng = np.random.default_rng(50)\n",
         "vectors = rng.random((10**7*2, 70), dtype=np.float32)\n",
@@ -563,15 +553,32 @@
         "query = rng.random((1, 70), dtype=np.float32)\n",
         "\n",
         "actual_sorted_ids_20m = np.argsort(vectors.dot(query.T).T / (np.linalg.norm(vectors, axis=1) * np.linalg.norm(query)), axis= 1).squeeze().tolist()[::-1]"
-      ],
-      "metadata": {
-        "id": "c83ybYSKK85G"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QzkAn4AF19Jl",
+        "outputId": "e8dab0ed-52d1-4cd8-d290-6973f351ff55"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "100K\tscore\t-307208.0\ttime\t8.06\tRAM\t4.66 MB\n",
+            "1M\tscore\t-3062013.0\ttime\t7.79\tRAM\t0.03 MB\n",
+            "5M\tscore\t-15309954.0\ttime\t7.80\tRAM\t0.05 MB\n",
+            "10M\tscore\t-30614896.0\ttime\t7.65\tRAM\t0.03 MB\n",
+            "15M\tscore\t-45922276.0\ttime\t7.80\tRAM\t0.00 MB\n",
+            "20M\tscore\t-61232472.0\ttime\t7.84\tRAM\t0.00 MB\n"
+          ]
+        }
+      ],
       "source": [
         "db = VecDB(file_path = PATH_DB_100K, new_db = False)\n",
         "actual_ids = get_actual_ids_first_k(actual_sorted_ids_20m, 10**5)\n",
@@ -631,36 +638,11 @@
         "to_print = f\"20M\\tscore\\t{eval[0]}\\ttime\\t{eval[1]:.2f}\\tRAM\\t{mem:.2f} MB\"\n",
         "to_print_arr.append(to_print)\n",
         "print(to_print)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QzkAn4AF19Jl",
-        "outputId": "e8dab0ed-52d1-4cd8-d290-6973f351ff55"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "100K\tscore\t-307208.0\ttime\t8.06\tRAM\t4.66 MB\n",
-            "1M\tscore\t-3062013.0\ttime\t7.79\tRAM\t0.03 MB\n",
-            "5M\tscore\t-15309954.0\ttime\t7.80\tRAM\t0.05 MB\n",
-            "10M\tscore\t-30614896.0\ttime\t7.65\tRAM\t0.03 MB\n",
-            "15M\tscore\t-45922276.0\ttime\t7.80\tRAM\t0.00 MB\n",
-            "20M\tscore\t-61232472.0\ttime\t7.84\tRAM\t0.00 MB\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(\"Team Number\", TEAM_NUMBER)\n",
-        "print(\"\\n\".join(to_print_arr))"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -668,11 +650,10 @@
         "id": "jt1_7ihfB37Z",
         "outputId": "7bea2249-75b8-42b2-e8f3-21fafe81bc10"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Team Number 1\n",
             "10K\tscore\t0.0\ttime\t1.11\tRAM\t0.84 MB\n",
@@ -684,25 +665,45 @@
             "20M\tscore\t-61232472.0\ttime\t7.84\tRAM\t0.00 MB\n"
           ]
         }
+      ],
+      "source": [
+        "print(\"Team Number\", TEAM_NUMBER)\n",
+        "print(\"\\n\".join(to_print_arr))"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "YneWf9F0oS2J"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "a01AEyyiXp56"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.12.0"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
