Random number generation #3

--- a/test_generate.ipynb
+++ b/test_generate.ipynb
@@ -193,10 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "rng = np.random.default_rng(50)\n",
+    "for i in range(200):\n",
+    "    vectors = rng.random((100000, 70), dtype=np.float32)\n",
+    "    np.save(f\"./data/batch{i}.npy\", vectors)\n",
+    "    del vectors"
+   ]
   }
  ],
  "metadata": {
@@ -215,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
