--- a/test_generate.ipynb
+++ b/test_generate.ipynb
@@ -198,10 +198,10 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "rng = np.random.default_rng(50)\n",
-    "for i in range(200):\n",
+    "rng = np.random.default_rng(20)\n",
+    "for i in range(1):\n",
     "    vectors = rng.random((100000, 70), dtype=np.float32)\n",
-    "    np.save(f\"./data/batch{i}.npy\", vectors)\n",
+    "    np.save(f\"./saved_db_100k/batch{i}.npy\", vectors)\n",
     "    del vectors"
    ]
   }
@@ -222,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
